Bug 89522 - PERF FILEOPEN xlsx: Excel 30s, Calc 10 min
Summary: PERF FILEOPEN xlsx: Excel 30s, Calc 10 min
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
4.4.0.3 release
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.3.0
Keywords: filter:xlsx, haveBacktrace, perf
: 68747 (view as bug list)
Depends on:
Blocks: XLSX File-Opening
  Show dependency treegraph
 
Reported: 2015-02-21 08:17 UTC by raal
Modified: 2019-04-25 13:42 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Sample file (3.00 MB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-04-02 14:51 UTC, Xisco Faulí
Details
Callgrind output from master (8.09 MB, application/x-xz)
2019-04-04 06:42 UTC, Buovjaga
Details

Note You need to log in before you can comment on or make changes to this bug.
Description raal 2015-02-21 08:17:52 UTC
Steps to reproduce:
- open attachment from bug 68497
https://bugs.documentfoundation.org/attachment.cgi?id=84635

Compare opening time :  Excel2010 30s, Calc 10 min on the same machine
LO 4.4.0.3, win7
Comment 1 Buovjaga 2015-02-25 13:30:33 UTC
Same result with Calc.

Win 7 Pro 64-bit, LibO Version: 4.4.0.3
Build ID: de093506bcdc5fafd9023ee680b8c60e3e0645d7
Locale: fi_FI

Ubuntu 14.10 64-bit 
Version: 4.4.0.3
Build ID: 40m0(Build:3)
Locale: en_US
Comment 2 MM 2015-02-26 22:45:37 UTC
Duplicate ??? https://bugs.documentfoundation.org/show_bug.cgi?id=89264
Comment 3 QA Administrators 2017-09-01 11:19:18 UTC Comment hidden (obsolete)
Comment 4 Roman Kuznetsov 2019-02-15 22:05:13 UTC
It took over 10 min in 

Version: 6.3.0.0.alpha0+
Build ID: c57dc7d41bd62f933cffab6131edb7252606382d
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

and I saw Warning window with:

Warning loading document 89522 LibreOfiice-Crashing-File.xlsx:
The data could not be loaded completely because the maximum number of columns per sheet was exceeded.
Comment 5 Xisco Faulí 2019-04-02 14:51:47 UTC
Created attachment 150485 [details]
Sample file
Comment 6 Xisco Faulí 2019-04-02 15:15:12 UTC
it takes

real	10m22,873s
user	10m21,050s
sys	0m2,792s

Version: 6.3.0.0.alpha0+
Build ID: 3b518953a8141b0d5043c2f3996a92956fdc3a47
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 7 Buovjaga 2019-04-04 06:42:32 UTC
Created attachment 150522 [details]
Callgrind output from master

I had to interrupt the callgrind. It had run for 30 hours. I hope it is ok.

Arch Linux 64-bit
Version: 6.3.0.0.alpha0+
Build ID: 3b518953a8141b0d5043c2f3996a92956fdc3a47
CPU threads: 8; OS: Linux 5.0; UI render: default; VCL: gtk3; 
Locale: fi-FI (fi_FI.UTF-8); UI-Language: en-US
Calc: threaded
Built on 2 April 2019
Comment 8 Xisco Faulí 2019-04-23 22:12:04 UTC
still reproducible in

Version: 6.3.0.0.alpha0+
Build ID: 0a04150b6eefb5feb7ecefaa5cd63dbac8c1574f
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, I thought you might be interested in this issue...
Comment 9 Xisco Faulí 2019-04-24 11:23:47 UTC
just rechecked in

Version: 6.3.0.0.alpha0+
Build ID: 90e3b47b52f26420425a7417d2f51b6a386282d9
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

and now it takes half the time

real	5m6,477s
user	5m2,686s
sys	0m2,739s
Comment 10 Commit Notification 2019-04-24 14:09:39 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/bd44b3eef62f4325a189539d6ab1b90ca63cfc28%5E%21

tdf#89522 PERF FILEOPEN xlsx, part 1

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2019-04-24 14:11:18 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/88be8aa14d52ad102dc6b01c1c962d4e6cac4941%5E%21

tdf#89522 PERF FILEOPEN xlsx, part 2

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Xisco Faulí 2019-04-24 16:28:17 UTC
In

Version: 6.3.0.0.alpha0+
Build ID: d70b2154a6ba68b676c24e7512121a882a7ef963
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

it takes

real	1m23,789s
user	1m23,501s
sys	0m2,388s

7.5 times faster than comment 6. nice!
Comment 13 Xisco Faulí 2019-04-25 13:42:32 UTC
*** Bug 68747 has been marked as a duplicate of this bug. ***