solenv/CompilerTest_compilerplugins_clang.mk
@@ -79,6 +79,7 @@ $(eval $(call gb_CompilerTest_add_exception_objects,compilerplugins_clang, \
     compilerplugins/clang/test/unusedvariablemore \
     compilerplugins/clang/test/useuniqueptr \
     compilerplugins/clang/test/vclwidgets \
+    compilerplugins/clang/test/weakbase \
     compilerplugins/clang/test/writeonlyvars \
 ))
 
